# dataanalyzer

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  README_ENHANCED.md  docker-compose.local.yml  docker-compose.yml  enhanced_frontend.py  gradio_frontend.py  install.py  main.py  pyproject.toml  scheduler.py  scheduler_config.json  start-local.ps1  start-local.sh
databases/: excel_data.duckdb
tools/: database.py  duckdb_connector.py  excel_processor.py  mongodb.py  pythontools.py
