[project]
name = "dataanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.29.0",
    "mariadb>=1.1.12",
    "matplotlib>=3.10.3",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pymongo>=4.12.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "reportlab>=4.0.0",
    "seaborn>=0.12.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "oracledb>=1.0.0",
    "plotly>=6.2.0",
    "duckdb>=1.0.0",
    "pygwalker>=0.4.0",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.5.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.5.0",
    "streamlit>=1.29.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
]
